// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`task-details > renders 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>





      <form method="post" id="completeTaskForm" action="">
  <div class="govuk-form-group">
        <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>


  </div>


    <div class="govuk-button-group">
      <button
        type="submit"
        data-prevent-double-click="true"
        data-testid="save-and-continue-button"
        class="govuk-button"
        data-module="govuk-button"
        data-govuk-button-init=""
      >
        Save and continue
      </button>
    </div>
</form>

  </div>
</div>
"
`;

exports[`task-details > renders completed task as read-only when case is not interactive 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <div class="form-group">
          <h2 class="govuk-heading-m">Outcome review note</h2>
          <p>Initial review completed</p>
        </div>
  </div>
</div>
"
`;

exports[`task-details > renders completed task with editable form when case is interactive 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <form method="post" id="completeTaskForm" action="">
  <div class="govuk-form-group">
    
    <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Select outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="status" name="status" type="radio" value="approved" checked>
      <label class="govuk-label govuk-radios__label" for="status">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="status-2" name="status" type="radio" value="rejected">
      <label class="govuk-label govuk-radios__label" for="status-2">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>


  </div>


    <div class="govuk-button-group">
      <button
        type="submit"
        data-prevent-double-click="true"
        data-testid="save-and-continue-button"
        class="govuk-button"
        data-module="govuk-button"
        data-govuk-button-init=""
      >
        Save and continue
      </button>
    </div>
</form>

  </div>
</div>
"
`;

exports[`task-details > renders completed task without form when user lacks permission 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <p>You cannot edit this task.</p>

        <details class="govuk-details">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      Who can edit the task
    </span>
  </summary>
  <div class="govuk-details__text">
              <p>Someone who is a:</p>
          
            <div class="govuk-!-margin-bottom-3">
              <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-1">
                  <li>admin</li>
              </ul>
            </div>

          

  </div>
</details>

  </div>
</div>
"
`;

exports[`task-details > renders with interactive form 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>





      <form method="post" id="completeTaskForm" action="">
  <div class="govuk-form-group">
        <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>


  </div>


    <div class="govuk-button-group">
      <button
        type="submit"
        data-prevent-double-click="true"
        data-testid="save-and-continue-button"
        class="govuk-button"
        data-module="govuk-button"
        data-govuk-button-init=""
      >
        Save and continue
      </button>
    </div>
</form>

  </div>
</div>
"
`;

exports[`task-details > renders with non-interactive form 1`] = `
"
<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    <a href="/cases/case-id" class="govuk-back-link" data-testid="back-link">Back to task list</a>


    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




        

  <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
  <div class="govuk-notification-banner__header">
    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
      Important
    </h2>
  </div>
  <div class="govuk-notification-banner__content">
    <p class="govuk-body">Tasks cannot be edited in the current status</p>
  </div>
</div>



      <form method="post" id="completeTaskForm" action="">
  <div class="govuk-form-group">
        <div class="govuk-form-group">
  <fieldset class="govuk-fieldset" aria-disabled="true">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true" disabled>
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</fieldset>
</div>


  </div>


</form>

  </div>
</div>
"
`;
